--- a/deploy/App.html
+++ b/deploy/App.html
@@ -3,7 +3,7 @@
 <head>
     <title>Health Check</title>
     <!--  (c) 2013 Rally Software Development Corp.  All Rights Reserved. -->
-    <!--  Build Date: Sat Sep 28 2013 22:13:09 GMT-0700 (PDT) -->
+    <!--  Build Date: Mon Sep 30 2013 09:13:00 GMT-0700 (PDT) -->
     <script type="text/javascript" src="/apps/2.0rc1/sdk.js"></script>
 
     <script type="text/javascript">
@@ -170,10 +170,11 @@ Ext.define('Rally.technicalservices.logger',{
             if ( percent > 75 ) {
                 color = TSRenderers.red;
             }
+
+        }
             if ( percent === 200 ) {
                 text = "Never";
             }
-        }
         metaData.style = "background-color: " + color;
         return "<div style='text-align:center;background-color:" + color + "'>"+ text + "</div>";
     },
@@ -421,15 +422,22 @@ var useName = function(value,record) {
         return record.get('Name');
     } 
     return null;
-}
+};
 
 var useObjectID = function(value,record) {
     if ( record.get('ObjectID') ) {
         return record.get('ObjectID');
     } 
     return 0;
-}
+};
 
+var convertMetric = function(value,record) {
+    value = value.toLowerCase();
+    if ( value !== "count" ) {
+        value = "estimate";
+    }
+    return value;
+};
 Ext.define('Rally.technicalservices.ProjectModel',{
     extend: 'Ext.data.Model',
     require: ['Rally.technicalservices.util.Utilities'],
@@ -439,6 +447,7 @@ Ext.define('Rally.technicalservices.ProjectModel',{
         {name:'parent_id',type:'int'},
         {name:'id',type:'int',convert:useObjectID},
         {name:'text',type:'string',convert:useName},
+        {name:'metric',type:'string',defaultValue:'estimate',convert:convertMetric}, /* by count or by estimate */
         /* values from the one associated iteration */
         {name:'iteration_name',type:'string',defaultValue:''},
         {name:'iteration_end_date',type:'auto'},
