Estimation Ratio assumes zero estimate is on purpose (only null is counted as unestimated)

--- a/deploy/App.html
+++ b/deploy/App.html
@@ -3,7 +3,7 @@
 <head>
     <title>Health Check</title>
     <!--  (c) 2013 Rally Software Development Corp.  All Rights Reserved. -->
-    <!--  Build Date: Mon Oct 14 2013 16:11:05 GMT-0700 (PDT) -->
+    <!--  Build Date: Mon Oct 14 2013 16:35:25 GMT-0700 (PDT) -->
     <script type="text/javascript" src="/apps/2.0rc1/sdk.js"></script>
 
     <script type="text/javascript">
@@ -1083,6 +1083,7 @@ Ext.define('CustomApp', {
     extend: 'Rally.app.App',
     componentCls: 'app',
     use_saved_ranges: false,
+    skip_zero_for_estimation_ratio: true,
     logger: new Rally.technicalservices.logger(),
     items: [ 
         { xtype:'container',itemId:'selector_box', padding: 5, defaults: { padding: 5 }, layout: { type:'hbox'} }, 
@@ -1115,7 +1116,7 @@ Ext.define('CustomApp', {
                         }
                     });
                 } else {
-                    me.logger.log(this, "No APP ID, so preferences will not be saved");
+                    me.logger.log(this, "Preferences will not be saved");
                     this._definePageDisplay();
                 }
 
@@ -1416,7 +1417,7 @@ Ext.define('CustomApp', {
         this.logger.log(this,"_setArtifactHealth",iteration_name,project);
         var me = this;
         
-        var artifacts = []; // have to get both stories and defects
+        var candidate_artifacts = []; // have to get both stories and defects
         var filters = [
             {property:'Iteration.Name',value:iteration_name}
         ];
@@ -1430,7 +1431,7 @@ Ext.define('CustomApp', {
             fetch: fetch,
             listeners: {
                 load: function(store,records){
-                    artifacts = records;
+                    candidate_artifacts = records;
                     Ext.create('Rally.data.WsapiDataStore',{
                         model:'Defect',
                         autoLoad: true,
@@ -1438,8 +1439,18 @@ Ext.define('CustomApp', {
                         fetch: fetch,
                         listeners: {
                             load: function(store,records){
-                                artifacts = Ext.Array.push(artifacts,records);
-                                me.logger.log(this,project.get('Name'),artifacts.length);
+                                candidate_artifacts = Ext.Array.push(candidate_artifacts,records);
+                                if ( me.skip_zero_for_estimation_ratio ) {
+                                    var artifacts = [];
+                                    Ext.Array.each(candidate_artifacts, function(artifact){
+                                        if ( artifact.get('PlanEstimate') !== 0 ) {
+                                            artifacts.push(artifact);
+                                        }
+                                    });
+                                } else {
+                                    artifacts = candidate_artifacts;
+                                }
+                                
                                 project.setIterationArtifacts(artifacts);
                             }
                         }
